# ffi

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
algo/: Cargo.toml
python-binding/: Cargo.toml  pyproject.toml
python-binding/src/: hasher.rs
